--- a/TankGame/TankGame.ioc
+++ b/TankGame/TankGame.ioc
@@ -39,28 +39,35 @@ Mcu.Pin22=PB12
 Mcu.Pin23=PB13
 Mcu.Pin24=PB14
 Mcu.Pin25=PB15
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin26=PD8
+Mcu.Pin27=PD9
+Mcu.Pin28=PD10
+Mcu.Pin29=PD11
 Mcu.Pin3=PE5
-Mcu.Pin30=PD0
-Mcu.Pin31=PD1
-Mcu.Pin32=PD2
-Mcu.Pin33=PD3
-Mcu.Pin34=PB3
-Mcu.Pin35=PB6
-Mcu.Pin36=PB7
-Mcu.Pin37=PE0
-Mcu.Pin38=PE1
-Mcu.Pin39=VP_SYS_VS_Systick
+Mcu.Pin30=PD12
+Mcu.Pin31=PD13
+Mcu.Pin32=PD14
+Mcu.Pin33=PA11
+Mcu.Pin34=PA12
+Mcu.Pin35=PA13
+Mcu.Pin36=PA14
+Mcu.Pin37=PD0
+Mcu.Pin38=PD1
+Mcu.Pin39=PD2
 Mcu.Pin4=PC14-OSC32_IN
+Mcu.Pin40=PD3
+Mcu.Pin41=PB3
+Mcu.Pin42=PB6
+Mcu.Pin43=PB7
+Mcu.Pin44=PE0
+Mcu.Pin45=PE1
+Mcu.Pin46=VP_SYS_VS_Systick
 Mcu.Pin5=PC15-OSC32_OUT
 Mcu.Pin6=PF0-OSC_IN
 Mcu.Pin7=PF1-OSC_OUT
 Mcu.Pin8=PA0
 Mcu.Pin9=PA5
-Mcu.PinsNb=40
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -170,10 +177,24 @@ PD0.Locked=true
 PD0.Signal=GPIO_Output
 PD1.Locked=true
 PD1.Signal=GPIO_Output
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.Locked=true
+PD11.Signal=GPIO_Output
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.Locked=true
+PD14.Signal=GPIO_Output
 PD2.Locked=true
 PD2.Signal=GPIO_Output
 PD3.Locked=true
 PD3.Signal=GPIO_Output
+PD8.Locked=true
+PD8.Signal=GPIO_Output
+PD9.Locked=true
+PD9.Signal=GPIO_Output
 PE0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PE0.GPIO_Label=MEMS_INT1 [L3GD20_INT1]
 PE0.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
@@ -272,7 +293,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADC12outputFreq_Value=48000000
 RCC.ADC34outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
