--- a/TankGame/TankGame.ioc
+++ b/TankGame/TankGame.ioc
@@ -17,62 +17,64 @@ Mcu.IP3=RTC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
-Mcu.IP7=USART1
-Mcu.IP8=USB
-Mcu.IPNb=9
+Mcu.IP7=TIM2
+Mcu.IP8=USART1
+Mcu.IP9=USB
+Mcu.IPNb=10
 Mcu.Name=STM32F303V(B-C)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PE8
-Mcu.Pin15=PE9
-Mcu.Pin16=PE10
-Mcu.Pin17=PE11
-Mcu.Pin18=PE12
-Mcu.Pin19=PE13
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PE8
+Mcu.Pin16=PE9
+Mcu.Pin17=PE10
+Mcu.Pin18=PE11
+Mcu.Pin19=PE12
 Mcu.Pin2=PE4
-Mcu.Pin20=PE14
-Mcu.Pin21=PE15
-Mcu.Pin22=PB12
-Mcu.Pin23=PB13
-Mcu.Pin24=PB14
-Mcu.Pin25=PB15
-Mcu.Pin26=PD8
-Mcu.Pin27=PD9
-Mcu.Pin28=PD10
-Mcu.Pin29=PD11
+Mcu.Pin20=PE13
+Mcu.Pin21=PE14
+Mcu.Pin22=PE15
+Mcu.Pin23=PB12
+Mcu.Pin24=PB13
+Mcu.Pin25=PB14
+Mcu.Pin26=PB15
+Mcu.Pin27=PD8
+Mcu.Pin28=PD9
+Mcu.Pin29=PD10
 Mcu.Pin3=PE5
-Mcu.Pin30=PD12
-Mcu.Pin31=PD13
-Mcu.Pin32=PD14
-Mcu.Pin33=PA11
-Mcu.Pin34=PA12
-Mcu.Pin35=PA13
-Mcu.Pin36=PA14
-Mcu.Pin37=PD0
-Mcu.Pin38=PD1
-Mcu.Pin39=PD2
+Mcu.Pin30=PD11
+Mcu.Pin31=PD12
+Mcu.Pin32=PD13
+Mcu.Pin33=PD14
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13
+Mcu.Pin37=PA14
+Mcu.Pin38=PD0
+Mcu.Pin39=PD1
 Mcu.Pin4=PC14-OSC32_IN
-Mcu.Pin40=PD3
-Mcu.Pin41=PB3
-Mcu.Pin42=PB6
-Mcu.Pin43=PB7
-Mcu.Pin44=PE0
-Mcu.Pin45=PE1
-Mcu.Pin46=VP_RTC_VS_RTC_Activate
-Mcu.Pin47=VP_RTC_VS_RTC_Calendar
-Mcu.Pin48=VP_SYS_VS_Systick
-Mcu.Pin49=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin40=PD2
+Mcu.Pin41=PD3
+Mcu.Pin42=PB3
+Mcu.Pin43=PB6
+Mcu.Pin44=PB7
+Mcu.Pin45=PE0
+Mcu.Pin46=PE1
+Mcu.Pin47=VP_RTC_VS_RTC_Activate
+Mcu.Pin48=VP_RTC_VS_RTC_Calendar
+Mcu.Pin49=VP_SYS_VS_Systick
 Mcu.Pin5=PC15-OSC32_OUT
+Mcu.Pin50=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin6=PF0-OSC_IN
 Mcu.Pin7=PF1-OSC_OUT
 Mcu.Pin8=PA0
-Mcu.Pin9=PA5
-Mcu.PinsNb=50
+Mcu.Pin9=PA1
+Mcu.PinsNb=51
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -95,6 +97,7 @@ PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=B1 [Blue PushButton]
 PA0.Locked=true
 PA0.Signal=GPIO_Input
+PA1.Signal=S_TIM2_CH2
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=DM
 PA11.Locked=true
@@ -298,7 +301,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADC12outputFreq_Value=48000000
 RCC.ADC34outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
@@ -360,6 +363,8 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=12.0 MBits/s
@@ -372,6 +377,8 @@ SPI1.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period
 TIM1.Period=9999
 TIM1.Prescaler=47
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.IPParameters=Channel-PWM Generation2 CH2
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
